# RaptureGL

./: .gitignore  CMakeLists.txt  README.md  TODO - Claude.md  TODO - Future.md  build_debug.bat  imgui.ini
Editor/: CMakeLists.txt
Editor/assets/: settings.ini
Editor/assets/models/: plane.gltf
Editor/src/: AppEntryPoint.h  CameraController.cpp  CameraController.h  ImGuiLayer.cpp  ImGuiLayer.h  TestLayer.cpp  TestLayer.h  main.cpp  source.cpp
Editor/src/ImGuiPanels/: AssetsPanel.cpp  AssetsPanel.h  EntityBrowserPanel.cpp  EntityBrowserPanel.h  LogPanel.cpp  LogPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SettingsPanel.cpp  SettingsPanel.h  StatsPanel.cpp  StatsPanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Input/: KeyBindings.cpp  KeyBindings.h
Engine/: CMakeLists.txt
Engine/src/: DataTypes.h  RendererAPI.h  main.cpp
Engine/src/Buffers/: BufferConversionHelpers.h  BufferLayout.h  BufferPools.cpp  BufferPools.h  Buffers.cpp  Buffers.h  VertexArray.cpp  VertexArray.h
Engine/src/Buffers/OpenGLBuffers/: BufferExample.h  InstancedExample.h  OpenGLBuffers.h
Engine/src/Buffers/OpenGLBuffers/IndexBuffers/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h
Engine/src/Buffers/OpenGLBuffers/StorageBuffers/: OpenGLStorageBuffer.cpp  OpenGLStorageBuffer.h
Engine/src/Buffers/OpenGLBuffers/UniformBuffers/: OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h
Engine/src/Buffers/OpenGLBuffers/VertexBuffers/: OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/src/Camera/: PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/src/Events/: ApplicationEvents.h  Event.h  Events.h  InputEvents.h  MouseEvents.h
Engine/src/File Loaders/: ModelLoader.cpp  ModelLoader.h
Engine/src/File Loaders/glTF/: glTF2Loader.cpp  glTF2Loader.h  glTFLoader.cpp  glTFLoader.h  json.hpp
Engine/src/Input/: Input.cpp  Input.h
Engine/src/Layers/: Layer.h  LayerStack.cpp
Engine/src/Logger/: Log.cpp  Log.h
Engine/src/Materials/: Material.cpp  Material.h  MaterialExample.cpp  MaterialInstance.cpp  MaterialInstance.h  MaterialLibrary.cpp  MaterialLibrary.h  MaterialParameter.h  MaterialSerializer.cpp  MaterialSerializer.h  MaterialUniformLayouts.h
Engine/src/Mesh/: Mesh.cpp  Mesh.h  SubMesh.h
Engine/src/Renderer/: Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  PrimitiveShapes.cpp  PrimitiveShapes.h  Raycast.cpp  Raycast.h  Renderer.cpp  Renderer.h
Engine/src/Scenes/: Entity.h  EntityNode.cpp  EntityNode.h  Scene.cpp  Scene.h
Engine/src/Scenes/Components/: BoundingBox.cpp  BoundingBox.h  Components.h  Transforms.cpp  Transforms.h
Engine/src/Scenes/Systems/: BoundingBoxSystem.cpp  BoundingBoxSystem.h
Engine/src/Shaders/: Shader.h  UniformBuffer.h
Engine/src/Shaders/GLSL/: PBR_fs.glsl  PBR_vs.glsl  SpecularGlossiness_fs.glsl  SpecularGlossiness_vs.glsl  blinn_phong_fs.glsl  blinn_phong_vs.glsl  default_fs.glsl  default_vs.glsl
Engine/src/Shaders/OpenGLShaders/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderCompiler.txt  OpengGLShaderCache.h
Engine/src/Shaders/OpenGLUniforms/: OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  UniformBindingPointIndices.h
Engine/src/Textures/: Texture.h  TextureLibrary.cpp
Engine/src/Textures/OpenGLTextures/: OpenGLTexture.cpp  OpenGLTexture.h
Engine/src/Timestep/: Timestep.cpp  Timestep.h
Engine/src/WindowContext/: Application.cpp  Application.h  WindowContext.h
Engine/src/WindowContext/OpenGLWindowContext/: OpenGLWindowContext.cpp  OpenGLWindowContext.h
materials/: red_metal.mat
